# simple-style-window

./: CMakeLists.txt  README.md
src/: MyButton.cpp  MyButton.h  StyleWindow.cpp  StyleWindow.h  main.cpp
